--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,10 +1,15 @@
 {% include header.html %}
 
 <div class="article" style="border-bottom: none;">
-	<h2>{{ page.title }}</h2>
+	<h1>{{ page.title }}</h1>
 	<p class="postinfo">Posted on {{ page.date | date_to_long_string }} by {{ page.author }}</p>
 	{{ content }}
 	<br />
+
+	{% if page.comments == true %}
+	<h1>Comments</h1>
+	{% include comments.html %}
+	{% endif %}
 </div>
 
 {% include footer.html %}
