--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,6 +8,8 @@
 
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 		<link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+
+		<meta name="viewport" content="width=device-width">
 	</head>
 	<body>
 		<div class="header">
