--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,6 +3,7 @@
 	<head>
 		<title> {{ page.title }} </title>
 		<link rel="stylesheet" type="text/css" href="/css/all.css" />
+		<link rel="stylesheet" type="text/css" href="/css/syntax.css" />
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 		<script type="text/javascript" src="/js/all.js"></script>
 
