--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,7 +7,7 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 		<script type="text/javascript" src="/js/all.js"></script>
 
-		<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+		<link href='http://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700' rel='stylesheet' type='text/css'>
 		<link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
 
 		<meta name="viewport" content="width=device-width">
@@ -21,6 +21,14 @@
 		  ga('create', 'UA-53642959-1', 'auto');
 		  ga('send', 'pageview');
 
+		</script>
+		<script>
+		 (function(d, t) {
+		    var g = d.createElement(t),
+		        s = d.getElementsByTagName(t)[0];
+		    g.src = 'http://assets.gfycat.com/js/gfyajax-0.517d.js';
+		    s.parentNode.insertBefore(g, s);
+		}(document, 'script'));
 		</script>
 	</head>
 	<body>
