Changed title to 'adrians soapbox', changed about page

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -33,7 +33,7 @@
 	</head>
 	<body>
 		<div class="header">
-			<h1 class="grad_text">flafla2's soapbox</h1>
+			<h1 class="grad_text">adrian's soapbox</h1>
 			<div class="nav" id="mobile">
 				<div class="grad_text">open navigation</div>
 			</div>
