--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,14 +2,13 @@
 <html>
 	<head>
 		<title> {{ page.title }} </title>
+		<link href='http://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700|Roboto' rel='stylesheet' type='text/css'>
+
 		<link rel="stylesheet" type="text/css" href="/css/all.css" />
 		<link rel="stylesheet" type="text/css" href="/css/syntax.css" />
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-		<script type="text/javascript" src="/js/all.js"></script>
-		<script type"text/javascript" src="https://assets.gfycat.com/gfycat.js"></script>
-
-		<link href='http://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700' rel='stylesheet' type='text/css'>
-		<link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+		<script defer src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+		<script defer type="text/javascript" src="/js/all.js"></script>
+		<script defer type"text/javascript" src="https://assets.gfycat.com/gfycat.js"></script>
 
 		<meta name="viewport" content="width=device-width">
 
