--- a/css/all.css
+++ b/css/all.css
@@ -26,6 +26,17 @@ ul {
 	list-style-type: square;
 	list-style-position: outside;
 	margin-left: 1em;
+	padding-bottom:1em;
+}
+
+ul ul {
+	list-style-type: circle;
+}
+
+ol {
+	list-style-position: outside;
+	margin-left: 1em;
+	padding-bottom:1em;
 }
 
 blockquote {
