--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,7 +11,8 @@
 		<script defer type"text/javascript" src="https://assets.gfycat.com/gfycat.js"></script>
 
 		<meta name="viewport" content="width=device-width">
-
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+		
 		<script>
 		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
