--- a/_layouts/tag.html
+++ b/_layouts/tag.html
@@ -1,11 +1,7 @@
----
-title: adrian's soapbox
----
-
 {% include header.html %}
-
-			{% for post in paginator.posts %}
-			{% if post.visible == true %}
+			<h1 style="padding: 10px;">Tag: {{ page.title }}</h1>
+			{% for post in site.posts %}
+			{% if post.visible == true and post.tag == page.shortname %}
 			<div class="article">
 				<a href="{{ post.url }}"><h2>{{ post.title }}</h2></a>
 				<p class="postinfo">
@@ -29,22 +25,5 @@ title: adrian's soapbox
 			<br />
 			{% endif %}
 			{% endfor %}
-
-			<p id="pagination">
-				{% for page in (1..paginator.total_pages) %}
-					{% if page == paginator.page %}
-						{{ page }}
-					{% elsif page == 1 %}
-						<a href="{{ '/index.html' | prepend: site.baseurl | replace: '//', '/' }}">1</a>
-					{% else %}
-						<a href="{{ site.paginate_path | prepend: site.baseurl | replace: '//', '/' | replace: ':num', page }}">{{ page }}</a>
-					{% endif %}
-
-					{% if page != paginator.total_pages %}
-					 | 
-					{% endif %}
-				{% endfor %}
-			</p>
-
 
 {% include footer.html %}
