--- a/css/all.css
+++ b/css/all.css
@@ -54,17 +54,19 @@ blockquote p {
 
 .post_tag {
 	display: inline-block;
-	padding: 2px 4px;
+	padding: 4px 8px;
+	font-size: 12px;
 
 	-webkit-border-radius: 3px;
 	-moz-border-radius: 3px;
 	border-radius: 3px;
 
-	border: 1px solid #888888;
+	color: #35b0f8;
+	background-color: #c4e8fd;
+}
 
-	color: #FFFFFF;
-	font-weight: bold;
-	background-color: #2A94D6;
+.post_tag:hover {
+	text-decoration: underline;
 }
 
 #footer {
@@ -130,6 +132,7 @@ a:active {
 }
 
 .postinfo {
+	margin-top: 2px;
 	font-size: 60%;
 	color: #A6A6A6;
 }
