--- a/css/syntax.css
+++ b/css/syntax.css
@@ -1,5 +1,5 @@
 .highlight, code  { background: #ffffff; border: 1px solid #a9a9a9; border-radius: 5px;}
-.highlight {padding: 5px; margin-bottom: 1em; overflow: auto;}
+.highlight {padding: 5px; margin-bottom: 1em; max-height: 35.7em; overflow: scroll;}
 .highlight code {border: 0 !important; background: clear !important; border-radius: 0 !important;}
 .highlight .c { color: #999988; font-style: italic } /* Comment */
 .highlight .err { color: #a61717; background-color: #e3d2d2 } /* Error */
@@ -60,3 +60,6 @@
 .highlight .vg { color: #008080 } /* Name.Variable.Global */
 .highlight .vi { color: #008080 } /* Name.Variable.Instance */
 .highlight .il { color: #009999 } /* Literal.Number.Integer.Long */
+.highlight td, .highlight table, .highlight tr {border: none;}
+.lineno { padding-left: 2px; padding-right: 4px; color: #888; }
+.code {padding-left: 4px;}
