Use https for google fonts to avoid SSL errors

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title> {{ page.title }} </title>
-		<link href='http://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700|Roboto' rel='stylesheet' type='text/css'>
+		<link href='https://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700|Roboto' rel='stylesheet' type='text/css'>
 
 		<link rel="stylesheet" type="text/css" href="/css/all.css" />
 		<link rel="stylesheet" type="text/css" href="/css/syntax.css" />
