Add momentum scroll on Recommended posts (ios)

--- a/css/all.css
+++ b/css/all.css
@@ -171,6 +171,8 @@ a:active {
 	overflow-y: hidden;
 	overflow-x: scroll;
 	white-space: nowrap;
+
+	-webkit-overflow-scrolling: touch;
 }
 
 .recommendation {
