--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,6 +6,7 @@
 
 		<link rel="stylesheet" type="text/css" href="/css/all.css" />
 		<link rel="stylesheet" type="text/css" href="/css/syntax.css" />
+		<link rel="alternate" type="application/rss+xml" href="/feed.xml" title="{{ site.title | escape }}" />
 		<script defer src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 		<script defer type="text/javascript" src="/js/all.js"></script>
 		<script defer type"text/javascript" src="https://assets.gfycat.com/gfycat.js"></script>
